tests/ui/allocator/no-thread-local.stderr
error: allocators cannot be `#[thread_local]`
  --> $DIR/no-thread-local.rs:6:1
   |
LL | / #[thread_local]
LL | |
LL | | static A: System = System;
   | |__________________________^

error: aborting due to 1 previous error

